--- a/WID/WID.csproj
+++ b/WID/WID.csproj
@@ -17,5 +17,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.UI.Xaml" Version="2.8.7" />
+    <PackageReference Include="System.Text.Json" Version="9.0.9" />
   </ItemGroup>
 </Project>
