--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,6 +14,10 @@ jobs:
 
     runs-on: windows-latest
 
+    strategy:
+      matrix:
+        arch: ["x64, arm64"]
+
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET
@@ -22,7 +26,7 @@ jobs:
         dotnet-version: 9.0.x
     - name: Restore dependencies
       run: dotnet restore
-    - name: Build
-      run: dotnet build --no-restore
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+    - name: Build (${{ matrix.arch }})
+      run: dotnet build --no-restore -r win-${{ matrix.arch }} -c Release
+    - name: Test (${{ matrix.arch }})
+      run: dotnet test --no-build --verbosity normal -r win-${{ matrix.arch }}
