--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,10 +14,6 @@ jobs:
 
     runs-on: windows-latest
 
-    strategy:
-      matrix:
-        arch: ["x64, arm64"]
-
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET
@@ -26,7 +22,11 @@ jobs:
         dotnet-version: 9.0.x
     - name: Restore dependencies
       run: dotnet restore
-    - name: Build (${{ matrix.arch }})
-      run: dotnet build --no-restore -r win-${{ matrix.arch }} -c Release
-    - name: Test (${{ matrix.arch }})
-      run: dotnet test --no-build --verbosity normal -r win-${{ matrix.arch }}
+    - name: Build (x64)
+      run: dotnet build --no-restore -r win-x64 -c Release
+    - name: Build (arm64)
+      run: dotnet build --no-restore -r win-arm64 -c Release
+    - name: Test (x64)
+      run: dotnet test --no-build --verbosity normal -r win-x64
+    - name: Test (arm64)
+      run: dotnet test --no-build --verbosity normal -r win-arm64
