--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,6 +23,12 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    - name: Free disk space
+      run: |
+        echo "Cleaning up runner disk space..."
+        rm -rf "C:\Program Files (x86)\Android"
+        rm -rf "C:\Program Files\dotnet\packs"
+
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v1.3
 
