--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,8 +26,8 @@ jobs:
     - name: Free disk space
       run: |
         echo "Cleaning up runner disk space..."
-        rm -rf "C:\Program Files (x86)\Android"
-        rm -rf "C:\Program Files\dotnet\packs"
+        rmdir /S /Q "C:\Program Files (x86)\Android"
+        rmdir /S /Q "C:\Program Files\dotnet\packs"
 
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v1.3
