--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,6 +32,9 @@ jobs:
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v1.3
 
+    - name: Install NuGet
+      uses: nuget/setup-nuget@v2
+
     - name: Restore NuGet packages
       run: nuget restore WID.sln
 
