--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -38,6 +38,15 @@ jobs:
     - name: Restore NuGet packages
       run: nuget restore WID.sln
 
+    - name: Decode signing certificate
+      run: |
+        echo "${{ secrets.SIGNING_CERTIFICATE }}" > cert.txt
+        certutil -decode cert.txt MyAppCert.pfx
+
+    - name: Import signing certificate
+      run: |
+        powershell -command "Import-PfxCertificate -FilePath MyAppCert.pfx -CertStoreLocation Cert:\CurrentUser\My -Password (ConvertTo-SecureString -String '${{ secrets.SIGNING_PASSWORD }}' -AsPlainText -Force)"
+
     - name: Build UWP project (single-node, no shared compilation)
       run: msbuild WID\WID.csproj /t:Restore,Build /p:Configuration=Release /p:Platform=${{ matrix.platform }} /p:UseSharedCompilation=false /nr:false /m:1 /v:minimal
 
