--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -60,8 +60,8 @@ jobs:
           Copy-Item -Path $_.FullName -Destination . -Force
         }
     
-    - name: Sign MSIX package
-      run: signtool sign /fd SHA256 /f MyAppCert.pfx /p (ConvertTo-SecureString -String '${{ secrets.SIGNING_PASSWORD }}' -AsPlainText -Force) "*.msix"
+    # - name: Sign MSIX package
+    #   run: signtool sign /fd SHA256 /f MyAppCert.pfx /p (ConvertTo-SecureString -String '${{ secrets.SIGNING_PASSWORD }}' -AsPlainText -Force) "*.msix"
 
     - name: Upload app package artifacts
       uses: actions/upload-artifact@v4
