--- a/WID/WID.csproj
+++ b/WID/WID.csproj
@@ -14,6 +14,7 @@
     <EnableMsixTooling>true</EnableMsixTooling>
     <PackageCertificateThumbprint>9850DBCEC0310B34C1D1C84F8D7650DEEC0CAAB9</PackageCertificateThumbprint>
     <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
+    <Version>$(VersionPrefix)</Version>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.UI.Xaml" Version="2.8.7" />
