feat(titlebar): Titlebar in a notebook now shows the name of said notebook
Also enabled automated assembly generation

--- a/WID/WID.csproj
+++ b/WID/WID.csproj
@@ -17,7 +17,7 @@
     <Version>$(AssemblyVersion)</Version>
     <AssemblyName></AssemblyName>
     <UseWPF>False</UseWPF>
-    <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
+    <GenerateAssemblyInfo>True</GenerateAssemblyInfo>
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="AppPackages\**" />
