fix(dev): Updated setup-msbuild to v2 and now uses x64 and arm64 architectures

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,7 +30,9 @@ jobs:
     #     rd /s /q "C:\Program Files\dotnet\packs"
 
     - name: Setup MSBuild
-      uses: microsoft/setup-msbuild@v1.3
+      uses: microsoft/setup-msbuild@v2
+      with:
+        msbuild-architecture: ${{ matrix.arch }}
 
     - name: Setup signtool
       uses: phuonghuynh/code-sign-action@v2.0.8
