--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,8 +26,11 @@ jobs:
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v2
 
-    - name: Setup signtool
-      uses: phuonghuynh/code-sign-action@v2.0.8
+    - name: Setup env vars
+      uses: "C:\\Program Files\\Microsoft Visual Studio\\2022\\Community\\VC\\Auxiliary\\Build\vcvarsall.bat" ${{ matrix.arch }}
+
+    # - name: Setup signtool
+    #   uses: phuonghuynh/code-sign-action@v2.0.8
 
     - name: Install NuGet
       uses: nuget/setup-nuget@v2
