--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,7 +27,7 @@ jobs:
       uses: microsoft/setup-msbuild@v2
 
     - name: Setup env vars
-      uses: "C:\\Program Files\\Microsoft Visual Studio\\2022\\Community\\VC\\Auxiliary\\Build\vcvarsall.bat" ${{ matrix.arch }}
+      uses: C:\\Program Files\\Microsoft Visual Studio\\2022\\Community\\VC\\Auxiliary\\Build\vcvarsall.bat${{ matrix.arch }}
 
     # - name: Setup signtool
     #   uses: phuonghuynh/code-sign-action@v2.0.8
