--- a/WID/WID.csproj
+++ b/WID/WID.csproj
@@ -3,7 +3,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net9.0-windows10.0.26100.0</TargetFramework>
     <TargetPlatformMinVersion>10.0.22000.0</TargetPlatformMinVersion>
-    <SelfContained>false</SelfContained>
+    <SelfContained>true</SelfContained>
     <Nullable>enable</Nullable>
     <UseUwp>true</UseUwp>
     <Platforms>x86;x64;arm64</Platforms>
