--- a/WID/WID.csproj
+++ b/WID/WID.csproj
@@ -33,6 +33,7 @@
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="Microsoft.UI.Xaml" Version="2.8.7" />
     <PackageReference Include="System.Text.Json" Version="9.0.9" />
+    <PackageReference Include="Win2D.uwp" Version="1.28.2" />
   </ItemGroup>
   <ItemGroup>
     <PRIResource Remove="AppPackages\**" />
