--- a/WID/WID.csproj
+++ b/WID/WID.csproj
@@ -39,4 +39,7 @@
   <ItemGroup>
     <PRIResource Remove="AppPackages\**" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AppSettings\AppSettings.csproj" />
+  </ItemGroup>
 </Project>
