feat(notes): Add shared project folder
Load colors from the settings file instead of pre-setting them

--- a/WID/WID.csproj
+++ b/WID/WID.csproj
@@ -41,5 +41,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AppSettings\AppSettings.csproj" />
+    <ProjectReference Include="..\Shared\Shared.csproj" />
   </ItemGroup>
 </Project>
