--- a/WID/WID.csproj
+++ b/WID/WID.csproj
@@ -35,6 +35,7 @@
     <PackageReference Include="CommunityToolkit.Uwp.Lottie" Version="8.2.250604" />
     <PackageReference Include="Microsoft.UI.Xaml" Version="2.8.7" />
     <PackageReference Include="PdfSharpCore" Version="1.3.67" />
+    <PackageReference Include="System.IO.Compression.ZipFile" Version="4.3.0" />
     <PackageReference Include="System.Text.Json" Version="9.0.9" />
     <PackageReference Include="Win2D.uwp" Version="1.28.2" />
   </ItemGroup>
