chore(build): Configure building params

--- a/WID/WID.csproj
+++ b/WID/WID.csproj
@@ -8,11 +8,10 @@
     <Platforms>x86;x64;arm64</Platforms>
     <RuntimeIdentifiers>win-x86;win-x64;win-arm64</RuntimeIdentifiers>
     <DefaultLanguage>en-US</DefaultLanguage>
-    <PublishAot>true</PublishAot>
     <PublishProfile>win-$(Platform).pubxml</PublishProfile>
     <DisableRuntimeMarshalling>true</DisableRuntimeMarshalling>
     <EnableMsixTooling>true</EnableMsixTooling>
-    <PackageCertificateThumbprint>9850DBCEC0310B34C1D1C84F8D7650DEEC0CAAB9</PackageCertificateThumbprint>
+    <PackageCertificateThumbprint>0170414422C2AC0453A830A17A687A0BB2CFFD98</PackageCertificateThumbprint>
     <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
     <Version>$(AssemblyVersion)</Version>
     <AssemblyName></AssemblyName>
@@ -30,6 +29,7 @@
     <GenerateTestArtifacts>True</GenerateTestArtifacts>
     <AppxBundle>Never</AppxBundle>
     <HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
+    <AppxSymbolPackageEnabled>True</AppxSymbolPackageEnabled>
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="AppPackages\**" />
