--- a/WID/WID.csproj
+++ b/WID/WID.csproj
@@ -30,6 +30,9 @@
     <AppxBundle>Never</AppxBundle>
     <HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
     <AppxSymbolPackageEnabled>True</AppxSymbolPackageEnabled>
+    <PackageProjectUrl>https://github.com/vld-b/Bismuth</PackageProjectUrl>
+    <PackageIcon>icon128x128.png</PackageIcon>
+    <RepositoryUrl>https://github.com/vld-b/Bismuth</RepositoryUrl>
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="AppPackages\**" />
@@ -52,5 +55,11 @@
   <ItemGroup>
     <ProjectReference Include="..\AppSettings\AppSettings.csproj" />
     <ProjectReference Include="..\Shared\Shared.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="Assets\icon128x128.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 </Project>
